--- a/Kubernetes.TestService.Api/Home/Home.cshtml
+++ b/Kubernetes.TestService.Api/Home/Home.cshtml
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link href="/base.css" rel="stylesheet">
+	<link href="base.css" rel="stylesheet">
 </head>
 <body>
 
